Fixed bug where the video wasn't centred properly on mobile.

--- a/assets/css/options.css
+++ b/assets/css/options.css
@@ -128,3 +128,9 @@
     margin-left: 20px;
     float: right;
 }
+
+.videoCentre {
+    margin-left: auto;
+    margin-right: auto;
+    display: block
+}
